fix(data-table): center align checkboxes

--- a/packages/carbon-web-components/src/components/data-table/_table-core.scss
+++ b/packages/carbon-web-components/src/components/data-table/_table-core.scss
@@ -224,6 +224,7 @@
   .#{$prefix}--table-expand div {
     display: flex;
     block-size: 100%;
+    align-items: center;
   }
 }
 
